Fix broken CSS

--- a/mikan/gainen/icontext.css
+++ b/mikan/gainen/icontext.css
@@ -6,7 +6,7 @@
 }
 .icontext .icon {
 	width: 64px;
-	height 68px;
+	height: 68px;
 	margin: 0;
 }
 .icontext .text {
